fix: List header alignment

--- a/frappe/public/scss/desk/list.scss
+++ b/frappe/public/scss/desk/list.scss
@@ -147,7 +147,6 @@
 
 .list-row-head {
 	@extend .list-row;
-	padding: 15px;
 	cursor: default;
 
 	.list-subject {
@@ -212,6 +211,10 @@ $level-margin-right: 8px;
 input.list-check-all, input.list-row-checkbox {
 	margin-top: 0px;
 	--checkbox-right-margin: calc(var(--checkbox-size) / 2 + #{$level-margin-right});
+}
+
+input.list-check-all {
+	margin-left: 15px;
 }
 
 .render-list-checkbox {
